external.css
body{
    line-height: normal;
    padding-left: 10px;
    min-height: 100;
}

*{
    font-family:'Work Sans', sans-serif;
}


h1{
    font-size: 20px;
}

.greeting{
    font-size: 40px;
    margin-bottom: 100px;
    padding-left: 155px;
    padding-bottom: 100px;
    font-family:'Work Sans', sans-serif;
    /* width: 100%; */
    position: relative;
    top: 100px;
    margin: 0 auto;
    /* border-right: 2px solid; */
    /* text-align: left;
    white-space:nowrap;  */
}


.intro{
    font-size: 30px;
    width: 24em;
    margin: 60px 145px 220px;
    padding-left: 10px;
    font-family:'Work Sans', sans-serif;
}

.navigate{
    text-align: right;
    /* border-bottom: 2px solid black;  */
    height: 40px;
    width: 85%;
    margin: 0 auto;

}

.navigate a{
    text-decoration: none;
    line-height: 40px;
    padding: 10px;
    margin: 0px 5px;
    color: black

}

.navigate a:hover {
    transition: 1s;
    border-radius: 15px;
    background-color: #dee1e3;
    color: #003f7e;
}
.section2{
    margin-bottom: 150px;
}

.section3{
    margin-bottom: 150px;   
    text-align: center;    
    padding-bottom: 100px;
    margin: 60px 145px 100px ;
}

.skills{
    color: #003f7e;

}




/* .card{
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    max-width: 300px;
    margin:auto;
    text-align: center;
}

button{
    border: none;
    outline: 0;
    display: inline-block;
    padding: 8px;
    color: white;
    background-color: #000;
    text-align: center;
    cursor: pointer;
    width: 100%;
    font-size: 18px;

} */

/* CARD  */

/* 
img {
    width: 30%;
    border-radius: 15px;
    height: 200px;
    object-fit: cover;

    display: block;
    height: auto;
}


#container{
    max-width: 300px;
    margin: 0 auto;

    margin-top: 20vh;
}

.card{
    background-color: white;
    padding: 10px;

    border-radius: 12px;
    border: 1px solid #BACDD8;
}



.name{
    font-size: 24px;
    font-weight: 600;

    margin-top: 16px;
}

p{
    font-size:14px;
    color: #788697;
    line-height: 150%;
}

button{
    border: none;
    padding: 12px 24px;
    border-radius: 50px;

    font-weight: 600;
    color: #0077FF;
    background-color: #E0EFFF;

    margin: 0 auto;
    display: block;

    translation: all 200ms ease-in-out;
    cursor:pointer
}

button:focus, button:hover{
    background-color: #0077FF;
    color:#E0EFFF;
}

.card-details {
    padding: 16px 8px 8px 8px;
} */



/* CARD GRID LAYOUT */

/* img {
    width: 100%;
    border-radius: 15px;
    height: 200px;
    object-fit: cover;

    display: block;
    height: auto;
} */


.tag{
    padding: 4px 8px;
    border: 1px solid white;

    font-size: 12px;
    font-weight: 600px;
    color: #788697;
}

.grid{
    margin: 80px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap:30px;
    align-items: center;
    padding-top: 200px;
    padding-bottom: 200px;

}

.grid > article{
    background: white;
    border: none;
    box-shadow: 2px 2px 6px 0px #e0e0e0;
    border-radius: 20px;
    text-align: center;
    width: 250px;
    transition: transform .3s;
}

.grid > article:hover{
    transform: translateY(5px);
    box-shadow: 2px 2px 26px 0px #cfd8dc;

}

.grid > article img{
    width: 100%;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.image2{
    height: 140px;
}

.text{
    padding: 0 20px 20px;
}

/* ABOUT */

.styled_OuterWrapper-sc-10tloyd-1-kWmmhb{
    background-color: rgb(34, 41, 47);
    border-bottom-width: 1px;
    border-color:rgb(34, 41, 47); 
}

.styledTerminalHeader{
    padding: 10px 0px 10px ;
    display: flex;
    width: 55%;
    -moz-box-align: center;
    align-items: center;
    height: 1.5rem;
    border-radius: 0.125rem;
    border-bottom-width: 1px red;
    background-color: rgb(218, 225, 231);
    margin-left: auto;
    margin-right: auto;

}

.styled_CloseButton-sc-10t-loyd-2-gBmArl{
    display: flex;
    margin-left: 0.5rem;
    -moz-box-align: center;
    align-items: center;
    text-align: center;
    border-color: rgb(220, 27, 27);
    background-color: rgb(206, 21, 21);
    border-radius: 9999px;
    width: 0.75rem;
    height: 0.75rem;
}

.styled_MinButton-sc-10t-loyd-5-fKHttt{
    margin-left: 0.5rem;
    border-color: rgb(250, 250, 135);
    background-color: yellow;

    border-radius: 9999px;
    width: 0.75rem;
    height: 0.75rem;
}

.styled_MaxButton-sc-10t-loyd-6-iDySRM{
    margin-left: 0.5rem;
    border-color: rgb(55, 121, 55);
    background-color: rgb(56, 152, 56);

    border-radius: 9999px;
    width: 0.75rem;
    height: 0.75rem;

}

.styled_TerminalContent-sc-10tloyd-8-jscHkR{
    background-color: #071b2f;
    padding: 10px 0px 10px ;
    width: 55%;
    height: 30rem;
    border-radius: 0.125rem;
    margin-left: auto;
    margin-right: auto;
    color: white;
}

/* .styled__Content-sc-10tloyd-10-gBxRZs{
    font-size: 1.125rem;
    font-weight: 300;
    box-sizing: content-box;

} */

.terminal_commands{
    font-family: 'Poppins', sans-serif;
    margin-left: 10px;
}

 .terminal_message, .terminal_message_facts{
     margin-left: 10px;
 }
/* FOOTER */
.col-4{
    font-weight: 500;
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 24px;
    line-height: 38px;
}

.container{
    margin: 60px;
    padding-left: 10px;

}

